fix: prevent tab style bleeding to children tabs

--- a/packages/daisyui/src/components/tab.css
+++ b/packages/daisyui/src/components/tab.css
@@ -117,7 +117,7 @@
 
 .tabs-border {
   @layer daisyui.modifier {
-    .tab {
+    > .tab {
       --tab-border-color: #0000 #0000 var(--tab-border-color) #0000;
       position: relative;
       border-radius: var(--radius-field);
@@ -271,7 +271,7 @@
     --tabs-height: auto;
     --tabs-direction: row;
 
-    .tab {
+    > .tab {
       --tab-order: 0;
       --tab-border: 0 0 var(--border) 0;
       --tab-radius-ss: min(var(--radius-field), var(--tab-radius-min));
@@ -314,7 +314,7 @@
       }
     }
 
-    &:has(.tab-content) {
+    &:has(> .tab-content) {
       > .tab:first-child {
         &:not(.tab-active, [aria-selected="true"], [aria-current="true"], [aria-current="page"]) {
           --tab-border-colors: var(--tab-border-color) var(--tab-border-color) #0000
@@ -323,7 +323,7 @@
       }
     }
 
-    .tab-content {
+    > .tab-content {
       --tabcontent-order: 1;
       --tabcontent-margin: calc(-1 * var(--border)) 0 0 0;
       --tabcontent-radius-ss: 0;
@@ -350,7 +350,7 @@
     --tabs-height: auto;
     --tabs-direction: row;
 
-    .tab {
+    > .tab {
       --tab-order: 1;
       --tab-border: var(--border) 0 0 0;
       --tab-radius-ss: 0;
@@ -393,7 +393,7 @@
       }
     }
 
-    &:has(.tab-content) {
+    &:has(> .tab-content) {
       > .tab:first-child {
         &:not(.tab-active, [aria-selected="true"], [aria-current="true"], [aria-current="page"]) {
           --tab-border-colors: #0000 var(--tab-border-color) var(--tab-border-color)
@@ -402,7 +402,7 @@
       }
     }
 
-    .tab-content {
+    > .tab-content {
       --tabcontent-order: 0;
       --tabcontent-margin: 0 0 calc(-1 * var(--border)) 0;
       --tabcontent-radius-ss: var(--radius-box);
@@ -426,7 +426,7 @@
     --tabs-height: 10rem;
     --tabs-direction: column;
 
-    .tab {
+    > .tab {
       --tab-order: 0;
       --tab-border: 0 1px 0 0;
       --tab-radius-ss: min(var(--radius-field),var(--tab-radius-min));
@@ -460,15 +460,15 @@
       }
     }
 
-    &:has(.tab-content) {
-      >.tab:first-child {
+    &:has(> .tab-content) {
+      > .tab:first-child {
         &:not(.tab-active, [aria-selected=true], [aria-current=true], [aria-current=page]) {
           --tab-border-colors: var(--tab-border-color) #0000 var(--tab-border-color) var(--tab-border-color);
         }
       }
     }
 
-    .tab-content {
+    > .tab-content {
       --tabcontent-order: 1;
       --tabcontent-margin: 0 0 0 -1px;
       --tabcontent-radius-ss: 0;
@@ -480,7 +480,7 @@
     :checked,
     label:has(:checked),
     :is(.tab-active, [aria-selected=true], [aria-current=true], [aria-current=page]) {
-      &+.tab-content:not(:nth-child(2)) {
+      & + .tab-content:not(:nth-child(2)) {
         --tabcontent-radius-ss: var(--radius-box);
       }
     }
@@ -502,7 +502,7 @@
       0 -0.5px oklch(100% 0 0 / calc(var(--depth) * 0.1)) inset,
       0 0.5px oklch(0% 0 0 / calc(var(--depth) * 0.05)) inset;
 
-    .tab {
+    > .tab {
       @apply rounded-field;
       border-style: none;
 
@@ -527,7 +527,7 @@
         border: 1px solid;
       }
     }
-    .tab-content {
+    > .tab-content {
       @apply mt-1;
       border-radius: calc(
         min(calc(var(--tab-height) / 2), var(--radius-field)) + min(0.25rem, var(--tabs-box-radius)) -
@@ -540,7 +540,7 @@
 .tabs-xs {
   @layer daisyui.modifier {
     --tab-height: calc(var(--size-field, 0.25rem) * 6);
-    :where(.tab) {
+    :where(& > .tab) {
       font-size: 0.75rem;
       --tab-p: 0.375rem;
       --tab-radius-min: calc(0.5rem - var(--border));
@@ -551,7 +551,7 @@
 .tabs-sm {
   @layer daisyui.modifier {
     --tab-height: calc(var(--size-field, 0.25rem) * 8);
-    :where(.tab) {
+    :where(& > .tab) {
       font-size: 0.875rem;
       --tab-p: 0.5rem;
       --tab-radius-min: calc(0.5rem - var(--border));
@@ -562,7 +562,7 @@
 .tabs-md {
   @layer daisyui.modifier {
     --tab-height: calc(var(--size-field, 0.25rem) * 10);
-    :where(.tab) {
+    :where(& > .tab) {
       font-size: 0.875rem;
       --tab-p: 0.75rem;
       --tab-radius-min: calc(0.75rem - var(--border));
@@ -573,7 +573,7 @@
 .tabs-lg {
   @layer daisyui.modifier {
     --tab-height: calc(var(--size-field, 0.25rem) * 12);
-    :where(.tab) {
+    :where(& > .tab) {
       font-size: 1.125rem;
       --tab-p: 1rem;
       --tab-radius-min: calc(1.5rem - var(--border));
@@ -584,7 +584,7 @@
 .tabs-xl {
   @layer daisyui.modifier {
     --tab-height: calc(var(--size-field, 0.25rem) * 14);
-    :where(.tab) {
+    :where(& > .tab) {
       font-size: 1.125rem;
       --tab-p: 1.25rem;
       --tab-radius-min: calc(2rem - var(--border));
